--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "ethereum-input-data-decoder": "0.0.12",
     "openzeppelin-solidity": "1.11.0",
     "truffle-hdwallet-provider": "0.0.5",
-    "web3": "^1.0.0-beta.35"
+    "web3": "^1.0.0-beta.35",
+    "web3-utils": "^1.0.0-beta.35"
   },
   "devDependencies": {
     "eslint": "^5.2.0"
