--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,7 @@
-# Env
+# Environment
+build/
 .env
-
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Misc
-*.DS_Store
-.idea/
-*.orig
-
-# Optional eslint cache
-.eslintcache
-
-# Output of 'npm pack'
-*.tgz
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
+.placeholder
 
 # Testing
 .nyc_output/
