--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "dependencies": {
     "dotenv": "^6.0.0",
     "ethereum-input-data-decoder": "0.0.12",
-    "openzeppelin-solidity": "1.11.0",
-    "truffle-hdwallet-provider": "0.0.5",
+    "openzeppelin-solidity": "2.0.0",
+    "truffle-hdwallet-provider": "^1.0.0-web3one.1",
     "web3": "^1.0.0-beta.36",
     "web3-utils": "^1.0.0-beta.36"
   },
