--- a/.eslintrc
+++ b/.eslintrc
@@ -6,8 +6,7 @@
     "es6": true
   },
   "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended"
+    "eslint:recommended"
   ],
   "parser": "babel-eslint",
   "parserOptions": {
@@ -16,8 +15,7 @@
     "sourceType": "module"
   },
   "plugins": [
-    "import",
-    "react"
+    "import"
   ],
   "rules": {
     "indent": [
