--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "eslint": "^6.7.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
+    "ethers": "^4.0.44",
     "prettier": "^1.19.1",
     "prettier-plugin-solidity": "^1.0.0-alpha.34",
     "shx": "^0.3.2",
     "solc": "0.5.11",
     "solhint": "^2.3.0",
     "truffle": "^5.1.1",
-    "web3": "^1.2.4"
+    "web3": "^1.2.4",
+    "web3-utils": "^1.2.6"
   },
   "keywords": [
     "blockchain",
